--- a/DZ1 (1)/index.html
+++ b/DZ1 (1)/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romeo and Juliet</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
      <div class="centr"><h1><h1>Romeo and Juliet</h1></h1></div>
