--- a/DZ2/DZ2(1)/index.html
+++ b/DZ2/DZ2(1)/index.html
@@ -7,12 +7,46 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="back">
-        <ol>
-            <li><span>apple</span></li>
-            <li><span>granat</span></li>
-        </ol>
+    <div class="container">
+        <div class="main-row">
+            <div class="apple">
+                <h3><span>apple</span></h3>
+            </div>
+            <div class="pineapple">
+                <h3><span>pineapple</span></h3>
+            </div>
+            <div class="grape">
+                <h3><span>grape</span></h3>
+            </div>
+            <div class="kiwi">
+                <h3><span>kiwi</span></h3>
+                <div class="lemon">
+                    <h3><span>lemon</span></h3>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+    <!-- второй вариант, непонравился первый -->
+
+
+    <div class="container--2">
+        <div class="main-row--2">
+            <ol>
+                <li><span>apple</span></li>
+                <li><span>pineapple</span></li>
+                <li><span>grape</span></li>
+                <li><span>kiwi</span></li>
+                <li><span>lemon</span></li>
+            </ol>
+        </div>
+    </div>
+
+    <!-- Если есть более правильный вариант решения этой задачи
+    буду очень рад рассмотреть его нижу.
+мог бы задать вопрос на уроке, но боюсь не донесу его :D -->
+
 </body>
 </html>
 
