--- a/DZ4/DZ4(2)/index.html
+++ b/DZ4/DZ4(2)/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Doors</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="block-left">
+    <div class="wrap">
+        <div class="door door_left" ></div>
+        <div class="door door_right" ></div>
+        <h1>HELLO</h1>
+      </div>
 
-        </div>
-        <div class="block-right">
 
-        </div>
-    </div>    
 </body>
 </html>
