--- a/DZ5/DZ5(1)/index.html
+++ b/DZ5/DZ5(1)/index.html
@@ -8,17 +8,81 @@
 </head>
 <body>
     <div class="container">
-        <div class="table">
+        <div class="table-container">
             <table>
                 <tr>
-                    <th>Заголовок</th>
-                    <th>Заголовок</th>
-                    <th>Заголовок</th>
-                    <th>Заголовок</th>
-                    <th>Заголовок</th>
+                    <th></th>
+                    <th>Заголовок 1</th>
+                    <th>Заголовок 2</th>
+                    <th>Заголовок 3</th>
+                    <th>Заголовок 4</th>
+                    <th>Заголовок 5</th>
                 </tr>
-                
-            </table>
+                <tr>
+                    <td>Линия 1</td>
+                    <td>Ячейка 2</td>
+                    <td>Ячейка 3</td>
+                    <td>Ячейка 4</td>
+                    <td>Ячейка 5</td>
+                    <td>Ячейка 6</td>
+                </tr>
+                <tr>
+                    <td>Линия 2</td>
+                    <td>Ячейка 7</td>
+                    <td>Ячейка 8</td>
+                    <td>Ячейка 9</td>
+                    <td>Ячейка 10</td>
+                    <td>Ячейка 11</td>
+                </tr>
+                <tr>
+                    <td>Линия 3</td>
+                    <td>Ячейка 12</td>
+                    <td>Ячейка 13</td>
+                    <td>Ячейка 14</td>
+                    <td>Ячейка 15</td>
+                    <td>Ячейка 16</td>
+                </tr>
+                <tr>
+                    <td>Линия 4</td>
+                    <td>Ячейка 17</td>
+                    <td>Ячейка 18</td>
+                    <td>Ячейка 19</td>
+                    <td>Ячейка 20</td>
+                    <td>Ячейка 21</td>
+                </tr>
+                <tr>
+                    <td>Линия 5</td>
+                    <td>Ячейка 22</td>
+                    <td>Ячейка 23</td>
+                    <td>Ячейка 24</td>
+                    <td>Ячейка 25</td>
+                    <td>Ячейка 26</td>
+                </tr>
+                <tr>
+                    <td>Линия 6</td>
+                    <td>Ячейка 27</td>
+                    <td>Ячейка 28</td>
+                    <td>Ячейка 29</td>
+                    <td>Ячейка 30</td>
+                    <td>Ячейка 31</td>
+                </tr>
+                <tr>
+                    <td>Линия 7</td>
+                    <td>Ячейка 32</td>
+                    <td>Ячейка 33</td>
+                    <td>Ячейка 34</td>
+                    <td>Ячейка 35</td>
+                    <td>Ячейка 36</td>
+                </tr>
+                <tr>
+                    <td>Линия 8</td>
+                    <td>Ячейка 37</td>
+                    <td>Ячейка 38</td>
+                    <td>Ячейка 39</td>
+                    <td>Ячейка 40</td>
+                    <td>Ячейка 41</td>
+                </tr>
+              </table>
         </div>
     </div>
 </body>
